--- a/tab/main.css
+++ b/tab/main.css
@@ -1,15 +1,15 @@
-.tab--box{
+.tabBox{
     margin: 20px auto;
     width: 500px;
-    height: 300px;
+    height: 200px;
 }
 
-.tab--box ul{
+.tabBox ul{
     position: relative;
     top: 1px;
 }
 
-.tab--box ul li{
+.tabBox ul li{
     display: inline-block;
     list-style: none;
     padding-right: 10px;
@@ -21,17 +21,17 @@
     cursor: pointer;
 }
 
-.tab--box ul li.active{
+.tabBox ul li.active{
     border-bottom: solid 1px #FFF;
     color: red;
 }
 
-.tab--box div{
+.tabBox div{
     display: none;
     border: solid 1px #AAA;
-    height: 300px;
+    height: 150px;
 }
 
-.tab--box div.active{
+.tabBox div.active{
     display: block;
 }
